# small-projects

./: .gitignore  pyproject.toml
small_projects/: bagels.py
