[tool.poetry]
name = "small-projects"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "small_projects"}]

[tool.poetry.dependencies]
python = "^3.12"
autopep8 = "^2.0.4"
pylint = "^3.1.0"
pyclean = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
